force-app/main/default/objects/Order_Item_Filter__mdt/Order_Item_Filter__mdt.object-meta.xml
<CustomObject>
    <label>Order Item Filter</label>
    <pluralLabel>Order item Filters</pluralLabel>
</CustomObject>