force-app/main/default/objects/Order_Item_Filter__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Name of the product that is considered for the field mapping from the Source Object to the Target Object.</description>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>