force-app/main/default/objects/Order_Item_Filter__mdt/fields/Product_Identifier_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Identifier_Type__c</fullName>
    <label>Product Identifier Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ExternalId</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>